<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.quizappvi.ui.fragments.MainFragment">


    <TextView
        android:id="@+id/Quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textAllCaps="true"
        android:textAlignment="gravity"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:textColor="@color/black"

        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_ar_tut"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"

        android:contentDescription="@string/todo">

    </ImageView>


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
     android:text="@string/questions_a"
      android:layout_marginTop="180dp"
           android:layout_marginStart="90dp"
      />






    <com.warkiz.widget.IndicatorSeekBar

        android:id="@+id/progress_bar"
        android:layout_width="250dp"
        android:layout_height="10dp"



        android:layout_marginStart="90dp"
        android:layout_marginTop="205dp"
        app:isb_max="100"
        app:isb_min="-1.0"
        app:isb_progress="25"
        app:isb_seek_smoothly="false"
        app:isb_ticks_count="1"

        app:isb_tick_marks_size="13dp"



        app:isb_indicator_color="#00BCD4"
        app:isb_indicator_text_color="@color/purple"
        app:isb_indicator_text_size="18sp"
        app:isb_track_background_color="#8F2EA3"
app:isb_thumb_color="@color/purple"




        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="#F4F1E9"
        app:isb_track_progress_size="4dp"
        app:isb_only_thumb_draggable="false"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="70dp"
        android:layout_marginTop="290dp"


        />







    <Spinner

        android:id="@+id/CategoryQ"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"


        android:entries="@array/types"


        android:layout_centerHorizontal="true"



        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"



        android:layout_centerHorizontal="false"
        android:layout_marginStart="70dp"
        android:layout_marginTop="390dp"


        />







    <Spinner

        android:id="@+id/DifQ"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="420dp"

        android:entries="@array/dificulity"

        android:layout_centerHorizontal="true"



        />


    <Button
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:text="@string/start"

        android:textAllCaps="true"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonbackground"


        >






    </Button>




</RelativeLayout>